# miniRT

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  questions.org  valgrind_runner.sh
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
inc/: data.h  graphics.h  light.h  minirt.h  operations.h  parsing.h  raytracing.h  scene_types.h  structures.h  utils.h
libft/: Makefile  ft_atod.c  ft_split.c  ft_str_chr_count.c  libft.h
maps/: sand.xpm  sand_bump.xpm  sky_normal.xpm
scenes/: amongus.rt  cylinder.rt  mandatory.rt  plane_1.rt  sphere.rt  sphere_2.rt  sphere_3.rt  sphere_4.rt  sphere_5.rt
scenes/amongus/: amongus_1.rt  amongus_2.rt
scenes/cone/: cone_1.rt  cone_10.rt  cone_2.rt  cone_3.rt  cone_4.rt  cone_5.rt  cone_6.rt  cone_7.rt  cone_8.rt  cone_9.rt
scenes/cylinder/: cylinder.rt  cylinder_1.rt  cylinder_2.rt  cylinder_3.rt  cylinder_4.rt  cylinder_5.rt  cylinder_6.rt  cylinder_7.rt  cylinder_9.rt
scenes/eval/: eval_1.rt  eval_10.rt  eval_2.rt  eval_4.rt  eval_5.rt  eval_6.rt  eval_7.rt  eval_8.rt  eval_9.rt
scenes/invalid/: Invalid_Ambient_Color_OutOfRange.rt  Invalid_Ambient_OutOfRange.rt  Invalid_Camera_FOV_OutOfRange.rt  Invalid_Camera_Orientation_NotNormalized.rt  Invalid_Common_Instructions.rt  Invalid_Cylinder_Diameter_Negative.rt  Invalid_Cylinder_Normal_NotNormalized.rt  Invalid_Identifier.rt  Invalid_Kommas.rt  Invalid_Light_Brightness_OutOfRange.rt  Invalid_Light_Color_OutOfRange.rt  Invalid_Multiple_A.rt  Invalid_Plane_Normal_NotNormalized.rt  Invalid_Sphere_Diameter_Negative.rt
src/: _main.c  data.c  graphics.c  light.c  light_and_color.c  light_and_color_1.c  light_and_color_2.c  math_operations.c  math_operations_1.c  math_operations_2.c  math_operations_3.c  parsing.c  parsing_extracting_objects.c  parsing_robust_check.c  parsing_robust_check_1.c  parsing_robust_check_2.c  parsing_robust_check_3.c  parsing_structures.c  parsing_structures_1.c  parsing_structures_2.c  ray_cone_intersection.c  ray_cylinder_intersect.c  ray_cylinder_intersect_1.c  ray_object_intersect.c  ray_object_intersect_1.c  raytracing.c  textures.c  texures.c  utils.c
(+28 files in other folders)
